# SHN-Chroma

./: README.md  main.py  pyproject.toml
src/: __init__.py
src/templates/: index.html
src/templates/base/: base.html
src/templates/home/: home.html
src/templates/uploads/: upload_pdf.html  upload_txt.html
